# libstardustxr-cpp

./: .gitignore  LICENSE  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
include/: clientconnector.hpp  message.hpp  messenger.hpp  messengermanager.hpp  scenegraph.hpp  util.hpp
include/client/: client_messenger.hpp  client_scenegraph.hpp  connector.hpp  messenger.hpp  node.hpp  scenegraph.hpp  stardust_scenegraph.hpp
include/dummy/: blank_scenegraph.hpp
include/server/: messenger.hpp  messengermanager.hpp  node.hpp  scenegraph.hpp  server_messenger.hpp  stardust_scenegraph.hpp
include/stardust_scenegraph/: client_stardust_scenegraph.hpp  node.hpp  server_node.hpp  server_stardust_scenegraph.hpp  stardust_scenegraph.hpp
res/: dome.blend  gyro.blend  gyro_gem.glb  meson.build  message.fbs  snowy_field_1k.exr  stardust_icon.glb
src/: client_messenger.cpp  clientconnector.cpp  flex.hpp  meson.build  messenger.cpp  messenger.hpp  messengermanager.cpp  node.hpp  scenegraph.hpp  server_messenger.cpp  stardust_scenegraph.cpp
src/client/: client_messenger.cpp  client_stardust_scenegraph.cpp  connector.cpp  connector.hpp  meson.build  messenger.cpp  messenger.hpp  scenegraph.hpp  stardust_scenegraph.cpp  stardust_scenegraph.hpp
src/common/: flex.hpp  meson.build  message.hpp  messenger.cpp  messenger.hpp
src/common/flatbuffers/: ActionInput.fbs  ActionInput.hpp  HandInput.hpp  Input.fbs  Input.hpp  PointerInput.fbs  PointerInput.hpp  common.fbs  common.hpp  compile.sh  convert_cpp.sh  meson.build  message.fbs  message.hpp
src/fusion/: common.hpp  flex.hpp  fusion.cpp  fusion.hpp  fusion_internal.hpp  libstardustxr.hpp  meson.build  messenger.cpp  messenger.hpp  random.cpp  random.hpp  scenegraph.cpp  scenegraph.hpp  sk_math.hpp  sk_math_util.h  values.cpp  values.hpp
src/fusion/DirectXMath/: meson.build
src/fusion/interfaces/: environmentinterface.cpp  environmentinterface.hpp  lifecycleinterface.cpp  lifecycleinterface.hpp  meson.build
src/fusion/types/: meson.build  model.cpp  model.hpp  node.cpp  node.hpp  spatial.cpp  spatial.hpp  spatialnode.cpp  spatialnode.hpp  zone.cpp  zone.hpp
src/fusion/types/data/: meson.build  receiver.cpp  receiver.hpp  sender.cpp  sender.hpp
src/fusion/types/drawable/: meson.build  model.cpp  model.hpp  text.cpp  text.hpp
src/fusion/types/fields/: boxfield.cpp  boxfield.hpp  cylinderfield.cpp  cylinderfield.hpp  field.cpp  field.hpp  meson.build  roundedboxfield.cpp  roundedboxfield.hpp  spherefield.cpp  spherefield.hpp
src/fusion/types/input/: datamap.cpp  datamap.hpp  inputactionhandler.cpp  inputactionhandler.hpp  inputactions.cpp  inputactions.hpp  inputhandler.cpp  inputhandler.hpp  meson.build
src/fusion/types/input/actions/: meson.build  singleactor.cpp  singleactor.hpp
src/fusion/types/input/flatbuffers/: HandInput_generated.h  Input_generated.h  PointerInput_generated.h  common_generated.h  meson.build
src/fusion/types/input/types/: handinput.cpp  handinput.hpp  meson.build  pointerinput.cpp  pointerinput.hpp
src/fusion/types/items/: acceptor.cpp  acceptor.hpp  environment.cpp  environment.hpp  item.cpp  item.hpp  meson.build  panel.cpp  panel.hpp
src/fusion/types/items/acceptors/: environment.cpp  environment.hpp  meson.build  panel.cpp  panel.hpp
src/fusion/types/items/types/: environment.cpp  environment.hpp  meson.build  panel.cpp  panel.hpp
src/fusion/types/spatial/: meson.build  spatial.cpp  spatial.hpp  zone.cpp  zone.hpp
src/fusion/util/: meson.build  tween.hpp
src/fusion/values/: glm.hpp  meson.build
src/server/: meson.build  messenger.cpp  messenger.hpp  messengermanager.cpp  messengermanager.hpp  scenegraph.hpp  server_messenger.cpp  server_stardust_scenegraph.cpp  socket.cpp  socket.hpp  stardust_scenegraph.cpp
src/util/: meson.build  threadsafe.hpp  threadsafelist.hpp  threadsafeobject.hpp
tests/: blank_scenegraph.hpp  meson.build  messenger.cpp
tests/fusion/: basic.cpp  data.cpp  environment.cpp  fields.cpp  hmd.cpp  input.cpp  launch.cpp  lifecycle.cpp  materials.cpp  meson.build  model.cpp  spatial.cpp  spatialloop.cpp  text.cpp  zone.cpp
tests/serverclient/: client.cpp  server.cpp
