install_headers(
	[
		'boxfield.hpp',
                'cylinderfield.hpp',
		'field.hpp',
		'roundedboxfield.hpp',
		'spherefield.hpp',
	],
	subdir: 'stardustxr/fusion/types/fields'
)

fusion_files += files(
	'boxfield.cpp',
        'cylinderfield.cpp',
	'field.cpp',
	'roundedboxfield.cpp',
	'spherefield.cpp',
)
